bug 1215552 - nsHttpConnectionMgr::PostEvent shouldnt manually ref count r=hurley